feat: h2 database
