# src/main/kotlin/com/valrTechassessment/service/models/orderBook/OrderBookDomainDto.kt
@@ -1,17 +1,18 @@
-package com.valrTechassessment.models.orderBook
+package com.valrTechassessment.service.models.orderBook
 
 import com.valrTechassessment.GetOrderBookResponse
 import java.time.OffsetDateTime
+import java.util.UUID
 
 data class OrderBookDomainDto(
-    val asks: List<OrderDomainDto>,
-    val bids: List<OrderDomainDto>,
+    val asksMap: Map<UUID, OrderDomainDto>,
+    val bidsMap: Map<UUID, OrderDomainDto>,
     val orderBooklastChange: OffsetDateTime,
     val orderBookSequenceNumber: Long
 ) {
     fun toResponseDto() = GetOrderBookResponse().apply {
-        asksList = asks.map { it.toResponseDto() }
-        bidsList = bids.map { it.toResponseDto() }
+        asks = asksMap.values.map { it.toResponseDto() }
+        bids = asksMap.values.map { it.toResponseDto() }
         lastChange = orderBooklastChange
         sequenceNumber = orderBookSequenceNumber
     }
